# bot-letter

./: .env-base  .env-docker  .gitignore  .gitlab-ci.yml  CHAT_GPT_PROMPTS.md  DESIGN_BRIEF.md  DEV-NOTES.md  MIGRADE-DB.MD  README.md  TO-DO.md  cookiecutter-config-file.yml  docker-compose.override-developement.yml  docker-compose.override-staging.yml  docker-compose.override.yml  docker-compose.yml  load-env.sh  queue.dockerfile  rabbitmq-deploy-advanced.conf  stag-deployment-env-vars.sh
backend/app/: .gitignore  logging-conf.yaml  pyproject.toml  worker-start.sh  worker-supervisord.conf
backend/app/alembic/versions/: 0e83df78007e_introduces_metrics_tables.py  1b9281d96222_adds_response_attribute_to_the_.py  24ececcacb62_introduces_redundancy_prompt_table.py  2da15850c3c9_removes_items.py  34b2e3d4948f_adds_the_models_to_newsletter_creator_.py  3aec957f5c14_initial_migration.py  48626c8e793d_adds_sample_available_field_to_.py  63c7c9f8175c_removes_user_subscription_search_.py  696aaa0c906a_adds_metric_models_for_newsletter_issues.py  745af60014f6_adjust_article_id_columns_length_and_.py  8c49390b7647_message.py  98604827a4c3_adds_subscription_limit_info_to_user.py  a10a588263ab_adds_newsletter_generation_config_table.py  a2e31e88c7a2_introduces_news_newsletter_creator_.py  bbe90972c9e3_adjust_issue_metrics_newsletter_.py  c8e30091928b_introduces_relevancy_prompt_table.py  (+5 more)
backend/app/app/: __init__.py  auth_backend.py  backend_pre_start.py  base_types.py  celeryworker_pre_start.py  main.py  path_utils.py  rate_limiter.py  time_utils.py  utils.py  worker.py
(+122 files in other folders)
